--- a/templates/include/layout.html
+++ b/templates/include/layout.html
@@ -6,13 +6,16 @@
     <title>test</title>
     {% load staticfiles %}
     <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}"/>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/common.css' %}"/>
     <script src="{% static 'js/jquery-1.10.2.min.js' %}"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
     <script src="{% static 'js/common.js' %}"></script>
 </head>
 <body>
-{% include 'header.html' %}
-{% block content %}{% endblock %}
-{% include 'footer.html' %}
+{% include 'include/header.html' %}
+<div style="min-height: 750px;">
+    {% block content %}{% endblock %}
+</div>
+{% include 'include/footer.html' %}
 </body>
 </html>
